# ink-writerPro

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  ENGINEERING_AUDIT_v9.2.md  ENGINEERING_AUDIT_v9.3.md  GEMINI.md  README.md  baseline_pretest.txt  gemini-extension.json  ink-writer-v9.0.0-工程审查报告.md  ink-writer-优化后分析报告.md  ink-writerPro-v7.0.6-全盘审计报告.md  prd.json  progress.txt  pyproject.toml  pytest.ini  ralph-使用说明.md  requirements.txt  sync-to-plugin-cache.sh  工程审查报告_v9.10.0.md  工程审查报告_v9.11.0.md  工程审查报告_v9.12.0.md  工程审查报告_v9.14.0.md  工程审查报告_v9.15.0.md  工程审查报告_v9.16.0.md  工程审查报告_v9.7.0.md  工程审查报告_v9.9.0.md
.claude/: .ink-current-project  settings.json
.claude-plugin/: marketplace.json
.codex/: INSTALL.md
benchmark/: __init__.py  baseline_v12.json  compare.py  config.py  corpus_index.json  craft_analyzer.py  e2e_shadow_300.py  gap_analysis.md  qg2_rewrite_ch1.md  reference_stats.json  scraper.py  stat_analyzer.py  style_benchmark.json  style_rag_builder.py  validate_qg1.py
config/: ab_channels.yaml  anti-detection.yaml  arbitration.yaml  checker-thresholds.yaml  colloquial.yaml  corpus_chunking.yaml  cultural-lexicon.yaml  debug.yaml  editor-wisdom.yaml  emotion-curve.yaml  foreshadow-lifecycle.yaml  high-point-scheduler.yaml  incremental-extract.yaml  ink_learn_throttle.yaml  live-review.yaml  llm_timeouts.yaml  model_selection.yaml  parallel-pipeline.yaml  plotline-lifecycle.yaml  prompt-cache.yaml  reader-pull.yaml  semantic-recall.yaml  voice-fingerprint.yaml
data/: golden-finger-cost-pool.json  hook_patterns.json  sensitive_lexicon.json
docs/: ADVANCED-COMMANDS.md  EDITOR_FEEDBACK_GUIDE.md  HOW-IT-WORKS-FOR-CIPHER.md  README.md  SETUP-EMBEDDING-API-FOR-CIPHER.md  USER_MANUAL.md  USER_MANUAL_DEBUG.md  agent_topology_v13.md  architecture.md  commands.md  editor-wisdom-integration.md  engineering-review-report-v2.md  engineering-review-report-v3.md  engineering-review-report-v4.md  engineering-review-report-v5.md  engineering-review-report.md  live-review-integration.md  (+8 more)
(+4150 files in other folders)
