[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ink-writer"
version = "15.0.0"
description = "长篇网文创作系统（skills + agents + data chain + RAG）"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [{ name = "cipher-wb" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "filelock>=3.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "watchdog>=5.0.0",
    "httpx>=0.27.0",
    "numpy~=2.4",
    "faiss-cpu~=1.13",
    "PyYAML~=6.0",
    "jsonschema~=4.26",
    "sentence-transformers~=5.4",
    "anthropic~=0.89",
]

[project.urls]
Homepage = "https://github.com/cipher-wb/ink-writerPro"
Repository = "https://github.com/cipher-wb/ink-writerPro"

[tool.setuptools.packages.find]
where = ["."]
include = ["ink_writer*"]
exclude = ["tests*", "benchmark*", "archive*", "docs*", "scripts*", "ink-writer*", "schemas*", "reports*", "tasks*", "ralph*", "flowchart*", "config*", "data*", "dashboard*"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["ink-writer/scripts", "ink-writer/dashboard"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line-too-long (由 line-length 控制，已放宽到 120)
    "E741",   # ambiguous variable name (中文项目允许短变量)
    "B905",   # zip-without-strict (兼容 3.12)
    "SIM108", # ternary operator (三元表达式不强制)
    "UP007",  # X | Y union syntax (保持 Optional 兼容写法)
]

[tool.ruff.lint.per-file-ignores]
"ink-writer/scripts/data_modules/tests/*" = [
    "E501",  # 测试中允许长行
    "B011",  # assert False
    "F811",  # fixture redefinition
]
"ink-writer/scripts/data_modules/__init__.py" = [
    "F401",  # unused imports (lazy re-exports)
]

[tool.ruff.lint.isort]
known-first-party = ["data_modules"]
